--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <h1 id="amount">0</h1>
             <button id="down" class="botao">-</button>
         </div>
-    </div>   
+    </div>
+    <footer><a href="https://www.flaticon.com/br/icones-gratis/pizza" title="pizza ícones">Pizza ícones criados por BZZRINCANTATION - Flaticon</a></footer>   
     <script src="/script.js"></script>
 </body>
 </html>
