--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <button id="down" class="botao">-</button>
         </div>
     </div>
-    <footer><a href="https://www.flaticon.com/br/icones-gratis/pizza" title="pizza ícones">Pizza ícones criados por BZZRINCANTATION - Flaticon</a></footer>   
+    <p>Espaço para anotações</p>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <footer><a href="https://www.flaticon.com/br/icones-gratis/pizza" title="pizza ícones">ícone feito por BZZRINCANTATION</a></footer>   
     <script src="/script.js"></script>
 </body>
 </html>
