--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input id="switch" type="checkbox">
     <div class="content">
         <h1 class="counter">Contador de Pizza</h1>
-        <img src="/assets/pizza.png" alt="">
+        <img src="/assets/pizza.png" alt="" id="foto">
         <div class ="panel">
             <button id="up" class="botao">+</button>
             <h1 id="amount">0</h1>
